--2.0-
Created ordinate class
Making generic float type
Consolidate the quadrant expression

--1.4--
Distance norm operator between 2 co-ordinates

--1.3.2--
Fix of readonly values to be static

--1.3.1--
Angle function added using arctan
zero (0,0) and (1,1) values

--1.3--
New features:
* extra operators for coord
* extra constructors 

--1.2--
New features:
* extra operators for float and coord
* boundary checker has additional overloads
* quadrant function

--1.1--
New features:
* extra operators for float coord
* Boundary checker