@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard1.0</TargetFramework>
+    <TargetFramework>netstandard1.3</TargetFramework>
     <Authors>Daniel Stamer-Squair</Authors>
     <Company>Daniel Stamer-Squair</Company>
     <SignAssembly>false</SignAssembly>
