@@ -2,6 +2,7 @@
 Created ordinate class
 Making generic float type
 Consolidate the quadrant expression
+moved to net standard 1.3 - using uaine.objects now
 
 --1.4--
 Distance norm operator between 2 co-ordinates
